--- a/AlgoApp/app/src/main/res/layout/algorithm_description.xml
+++ b/AlgoApp/app/src/main/res/layout/algorithm_description.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-            <WebView android:id="@+id/text_id"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:textSize = "15dp"
-                android:text="Test"
-                android:padding="5dp"/>
+    <ImageView
+        android:id="@+id/pdf_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:contentDescription="@null"
+        android:scaleType="fitXY" />
 
-</LinearLayout>
+</RelativeLayout>
